infra/modules/sgs/main.tf
resource "aws_security_group" "alb_sg" {
    name        = var.alb_sg_name
    description = "Security group for ALB allowing HTTP/HTTPS inbound traffic"
    vpc_id      = var.vpc_id
    
    tags = {
        Name = var.alb_sg_name
    }
  
}

resource "aws_security_group_rule" "allow_http_inbound" {
  type              = "ingress"
  from_port        = 80
  to_port          = 80
  protocol         = "tcp"
  cidr_blocks      = ["0.0.0.0/0"]
  security_group_id = aws_security_group.alb_sg.id
}

resource "aws_security_group_rule" "allow_https_inbound" {
    type              = "ingress"
    from_port        = 443
    to_port          = 443
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
    security_group_id = aws_security_group.alb_sg.id
}

resource "aws_security_group_rule" "allow_all_traffic_outbound" {
    type              = "egress"
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    security_group_id = aws_security_group.alb_sg.id

}
